# screen-grabber

./: Cargo.toml  LICENSE  OfficialRequirements.md  README.md
examples/: channels.rs  clipboard_export.rs  file_dialog.rs  multi_thread.rs  my_skia_with_image.rs
src/: main.rs
src/pages/: capture.rs  launcher.rs  mod.rs  settings.rs  types.rs
src/types/: annotation.rs  config.rs  editor.rs  icons.rs  keybinds.rs  mod.rs  rasterizer.rs  save_destination.rs  screen_grabber.rs  sync.rs  utils.rs
src/utils/: input.rs
