[package]
name = "screen-grabber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.24.0", features = ["persistence", "wgpu"] }
egui = "0.24.0"
egui_extras = { version = "0.24.0", features = ["all_loaders"] }
egui-modal = "0.3.0"
lazy_static = "1.4.0"
screenshots = "0.8.5"
serde = { version = "1.0.190", features = ["derive"] }
confy = { version = "0.5.1", features = ["yaml_conf"], default-features = false }
global-hotkey = "0.4.1"
keyboard-types = "0.7.0"